# Palimpsest

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  constants.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  pdf_utils.rs  types.rs
src-tauri/src/commands/: files.rs  merge.rs  mod.rs  pages.rs  read.rs  save.rs  save_locked.rs  updates.rs
src/__tests__/: constants.test.ts
src/components/: AnnotationContextMenu.tsx  AnnotationOverlay.tsx  DocumentView.tsx  DragPreview.tsx  ErrorBoundary.tsx  ExportDialog.tsx  HighlightRect.tsx  InkStroke.tsx  KeyboardShortcuts.tsx  OutlineSidebar.tsx  PageCanvas.tsx  PageContextMenu.tsx  PageGallery.tsx  PdfViewer.tsx  RedactionRect.tsx  SaveDialog.tsx  SearchBar.tsx  ShapeAnnotation.tsx  SignatureModal.tsx  SignatureStamp.tsx  StickyNote.tsx  TabBar.tsx  TextAnnotation.tsx  TextMarkup.tsx  Thumbnail.tsx  ThumbnailContextMenu.tsx  ThumbnailSidebar.tsx  Toolbar.tsx
src/hooks/: useAnnotations.ts  useCustomBookmarks.ts  useDragToMove.ts  useFileOpen.ts  useInkDrawing.ts  useMergeDocuments.ts  useOutsideClick.ts  usePageVisibility.ts  usePdfDocument.ts  useRecentFiles.ts  useResizeHandles.tsx  useSavedSignatures.ts  useTextSearch.ts
src/hooks/__tests__/: useAnnotations.test.ts  useCustomBookmarks.test.ts  useTextSearch.test.ts
src/lib/: save.ts  utils.ts
src/services/: pdfWorkerSetup.ts
(+6 files in other folders)
