[package]
name = "palimpsest"
version = "0.4.0"
description = "A free PDF editor"
authors = ["you"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "palimpsest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.35"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSURL", "NSString"] }

